v 1.2.2. Text in modal overflow fixed, security / font improvs

--- a/styles/Projects/Modal.module.scss
+++ b/styles/Projects/Modal.module.scss
@@ -76,6 +76,7 @@
 }
 
 .text--container--modal {
+    height: 80%;
     overflow-y: scroll;
     grid-row: 3 / 4;
     grid-column: 1 / span 2;
